More text in the paragraph text example

--- a/components/base/content/elements/base--p.html
+++ b/components/base/content/elements/base--p.html
@@ -1,1 +1,1 @@
-<p class="base--p">Paragraph Text</p>
+<p class="base--p">Paragraph Text. Hokey religions and ancient weapons are no match for a good blaster at your side, kid. You're all clear, kid. Let's blow this thing and go home! What?! All right. Well, take care of yourself, Han. I guess that's what you're best at, ain't it? Leave that to me. Send a distress signal, and inform the Senate that all on board were killed.</p>
