--- a/components/base/forms/controls/base--checkboxes.html
+++ b/components/base/forms/controls/base--checkboxes.html
@@ -1,4 +1,11 @@
-<label class="base--checkbox-label"><input type="checkbox" class="base--checkbox">Checkbox 1</label>
-<label class="base--checkbox-label"><input type="checkbox" class="base--checkbox">Checkbox 2</label>
-<label class="base--checkbox-label"><input required type="checkbox" class="base--checkbox">Required Checkbox 3</label>
-<label class="base--checkbox-label"><input required type="checkbox" class="base--checkbox">Required Checkbox 4</label>
+<input type="checkbox" id="checkbox-1" class="base--checkbox">
+<label class="base--checkbox-label" for="checkbox-1">Checkbox 1</label>
+
+<input type="checkbox" id="checkbox-2" class="base--checkbox">
+<label class="base--checkbox-label" for="checkbox-2">Checkbox 2</label>
+
+<input required type="checkbox" id="checkbox-3" class="base--checkbox">
+<label class="base--checkbox-label" for="checkbox-3">Required Checkbox 3</label>
+
+<input required type="checkbox" id="checkbox-4">
+<label class="base--checkbox-label" for="checkbox-4">Required Checkbox 4</label>
